--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ body{
     color:var(--branco);
     background-color: var(--cor-de-fundo); 
 }
+
+.conteudo-titulo{
+    text-align: center; 
+    margin-top: 80px;
+}
