--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
-.root{
+
+
+:root {
     --branco: white;
     --cor-de-fundo: #00162E;
-    --fundo-senha: #002440;
+    --fundo-senha: #00244D;
     --fundo-texto: #001E40;
-    --borda: #0075FF
+    --borda: #0075FF;
 }
-  
+
 body{
-    color:var(--branco);
-    background-color: var(--cor-de-fundo); 
+    color: var(--branco);
+    background-color: var(--cor-de-fundo);
 }
 
 .conteudo-titulo{
-    text-align: center; 
+    text-align: center;
     margin-top: 80px;
 }
