--- a/style.css
+++ b/style.css
@@ -14,9 +14,19 @@
 body{
     color: var(--branco);
     background-color: var(--cor-de-fundo);
+    font-family: var(--roboto);
 }
 
 .conteudo-titulo{
     text-align: center;
     margin-top: 80px;
+}
+
+.titulo-principal{
+    font-family: var(--roboto-mono);
+    margin-top: 32px;
+}
+
+.titulo-secundario{
+    font-size: 24px;
 }
