--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
     color: var(--branco);
     background-color: var(--cor-de-fundo);
     font-family: var(--roboto);
+    font-weight: 400;
 }
 
 .conteudo-titulo{
@@ -29,4 +30,17 @@ body{
 
 .titulo-secundario{
     font-size: 24px;
+}
+.conteudo-senha{
+    background: var(--fundo-senha);
+    padding: 24px;
+    border-bottom: 6px solid var(--borda);
+    margin-top: 80px;
+}
+#campo-senha{
+    border: none;
+    color: var(--branco);
+    font-family: var(--roboto-mono);
+    font-size: 40px;
+    width: 70%;
 }
