--- a/style.css
+++ b/style.css
@@ -38,9 +38,19 @@ body{
     margin-top: 80px;
 }
 #campo-senha{
+    background: var(--fundo-senha);
     border: none;
     color: var(--branco);
     font-family: var(--roboto-mono);
     font-size: 40px;
     width: 70%;
+}
+
+#campo-senha:focus{
+    outline: none;
+}
+
+.conteudo{
+    max-width: 120px;
+    margin: 0 auto;
 }
